--- a/templates/RegisterUser.html
+++ b/templates/RegisterUser.html
@@ -1,16 +1,55 @@
+{% extends 'base.html' %}
+
+{% block header %}
+    {% if not session.loggedIn %}
+        <div class="jumbotron">
+            <div class="container">
+                <h1 class="display-4">Vaccination Curation System</h1>
+                <p class="lead">We are trying to digitze the vaccination records of people to lead to a safer and secure future.</p>
+                <hr class="my-4">
+                <button type="button" class="btn btn-dark col-12"><a class="nav-link text-white" href="/" >GO BACK HOME</a></button>
+            </div>
+        </div>
+    {% else %}
+        <section id="nav-bar">
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <a class="navbar-brand" href="#main">VacciCure</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">HOME</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">SERVICES</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="/">ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">{{ session.userName }}</a>
+                    </li>
+                </ul>
+                </div>
+            </nav>
+        </section>
+    {% endif %}
+
 <div class="container">
     <h1 class="title text-center">REGISTER USER</h1>
     <div class="row">
         <div class="col-12 text-center">
-        <form action="/generalQuery" method="post" id="register_user_form">
+        <form action="/RegisterUser" method="post" id="register_user_form">
             <div class="form-row col-12">
                 <div class="form-group col-md-6">
                     <label for="name">Enter Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter Your Name">
+                    <input type="text"name="name" class="form-control" id="name" placeholder="Enter Your Name">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="DOB">Date of Birth</label>
-                    <input type="date" class="form-control" id="DOB" placeholder="DOB">
+                    <input type="date" name="dob" class="form-control" id="DOB" placeholder="DOB">
                 </div>
             </div>
             <div class="form-row col-12">
@@ -23,18 +62,18 @@
                     </select>
                 </div>
                 <div class="form-group col-md-6">
-                    <label for="userage">Pincode</label>
+                    <label for="pincode">Pincode</label>
                     <input type="text" name="pincode" required="required" size="6" maxlength="6" minlength="6" class="form-control" id="pincode" aria-describedby="user-age" placeholder="Enter Pincode">
                 </div>
             </div>
             <div class="form-row col-12">
                 <div class="form-group col-md-6">
                     <label for="State">State</label>
-                    <input type="text" required="true" class="form-control" id="state" placeholder="Enter state">
+                    <input type="text" name="state" required="true" class="form-control" id="state" placeholder="Enter state">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="address">Address</label>
-                    <input type="text" required="true" class="form-control" id="address" placeholder="Enter Address">
+                    <input type="text" name="address" required="true" class="form-control" id="address" placeholder="Enter Address">
                 </div>
             </div>
             <div class="form-row col-12">
@@ -51,12 +90,12 @@
             </div>
             <div class="form-row col-12">
                 <div class="form-group col-md-6">
-                    <label for="name">Enter Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="Enter Your Name">
+                    <label for="Gname">Enter Guardian Name</label>
+                    <input type="text" name="g_name" class="form-control" id="name" placeholder="Enter Your Name">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="AdhaarNumber">Adhaar Number</label>
-                    <input type="text" class="form-control" id="adhar" placeholder="Adhar Number">
+                    <input type="text" name="aadhar" class="form-control" id="adhar" placeholder="Adhar Number">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary col-10">Submit</button>
@@ -66,3 +105,4 @@
         </div>
     </div>
 </div>
+{% endblock %}
