--- a/templates/home.html
+++ b/templates/home.html
@@ -76,10 +76,22 @@
       <img src="{{url_for('static', filename='availability.jpeg')}}" class="service-img" onclick="window.open('/Availability')">
       <h4 class="icon-heading">Check availability</h4>
     </div>
+    <div class="col-md-4 services">
+      <img src="{{url_for('static', filename='RegisterUser.png')}}" class="service-img" onclick="window.open('/RegisterUser')">
+      <h4 class="icon-heading">Register New User</h4>
+    </div>
      {% endif %}
     <div class="col-md-4 services">
     <img src="{{url_for('static', filename='healthfacility.png')}}" class="service-img">
     <h4 class="icon-heading">Nearby Vaccine Facility</h4>
+    </div>
+    <div class="col-md-4 services">
+      <img src="{{url_for('static', filename='countrywiseicon.png')}}" class="service-img" onclick="window.open('#country')">
+      <h4 class="icon-heading">COUNTRY WISE Requirements</h4>
+    </div>
+    <div class="col-md-4 services">
+      <img src="{{url_for('static', filename='info.png')}}" class="service-img" onclick="window.open('/moreInfo')">
+      <h4 class="icon-heading">Know more about diseases and vaccines</h4>
     </div>
     </div>
     </div>
