--- a/templates/home.html
+++ b/templates/home.html
@@ -76,6 +76,9 @@
       <img src="{{url_for('static', filename='availability.jpeg')}}" class="service-img" onclick="window.open('/Availability')">
       <h4 class="icon-heading">Check availability</h4>
     </div>
+    {% endif %}
+
+    {% if session.loggedIn and (session.roleID == 2 or session.roleID == 1 or session.roleID == 3) %}
     <div class="col-md-4 services">
       <img src="{{url_for('static', filename='RegisterUser.png')}}" class="service-img" onclick="window.open('/RegisterUser')">
       <h4 class="icon-heading">Register New User</h4>
